--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,12 @@ faust-streaming = { extras = ["uvloop"], version = "^0.10.0" }
 black = "^22.12.0"
 httptools = "^0.5.0"
 rich = "^12.6.0"
+
+
+[tool.black]
+line-length = 120
+include = '\.pyi?$'
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
