--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,18 @@
 [tool.poetry]
 name = "fastapi-faust-streaming"
-version = "0.0.1"
+version = "0.0.2"
 description = ""
 authors = ["Jakub Miazek <the@grillazz.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-fastapi = "^0.88.0"
-uvicorn = { extras = ["standard"], version = "^0.20.0" }
-faust-streaming = { extras = ["uvloop"], version = "^0.10.0" }
-black = "^22.12.0"
-httptools = "^0.5.0"
-rich = "^12.6.0"
+python = "^3.11"
+fastapi = "*"
+uvicorn = { extras = ["standard"], version = "*" }
+faust-streaming = { extras = ["uvloop"], version = "*" }
+black = "*"
+httptools = "*"
+rich = "*"
 
 
 [tool.black]
