--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,9 @@
-version: "3.8"
-
 services:
-
   api:
     build: .
     ports:
       - "8080:8080"
-    command: bash -c "sh ./bin/wait-for/wait-for.sh kafka:29092 --timeout=20 &&
-      uvicorn app.api:app
+    command: bash -c "uvicorn app.api:app
       --host 0.0.0.0 --port 8080
       --reload 
        --log-config ./logging.ini
@@ -21,7 +17,7 @@ services:
 
   worker:
     build: .
-    command: bash -c "sh ./bin/wait-for/wait-for.sh kafka:29092 --timeout=20 && python -m app.worker worker -l info"
+    command: bash -c "python -m app.worker worker -l info"
     volumes:
       - ./app:/home/code/app
     environment:
@@ -31,7 +27,7 @@ services:
       - api
 
   kafka:
-    image: confluentinc/cp-kafka:7.3.1
+    image: confluentinc/cp-kafka:latest
     ports:
       - "29092"
     environment:
@@ -45,7 +41,7 @@ services:
       - zookeeper
 
   zookeeper:
-    image: confluentinc/cp-zookeeper:7.3.1
+    image: confluentinc/cp-zookeeper:latest
     ports:
       - "32181"
     environment:
